Refactor game retrieval methods to return structured responses in GameController and GameService